--- a/public/index.css
+++ b/public/index.css
@@ -22,5 +22,7 @@ img {
 
 .gif {
   max-width: 500px;
-  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
